--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -3,6 +3,8 @@ RUN yum update -y
 
 EXPOSE 53
 
+CMD ping 127.0.0.1
+
 #CMD ["bash"]
 
 #CMD ["named", "-c", "/etc/bind/named.conf", "-g", "-u", "named"]
