add config files

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM oraclelinux:8.4
 RUN yum update -y && \
-    yum install -y bind bind-utils bind-libs bind-chroot &&\
-    mkdir -p /var/named/masters && \
-    chmod u=rwx,g=rx /var/named/masters && \
-    chown named:named 
+    yum install -y bind bind-utils bind-libs bind-chroot &&
+RUN    mkdir -p /var/named/masters
+RUN    chmod u=rwx,g=rx /var/named/masters
+RUN    chown named:named /var/named/masters
 
 EXPOSE 53
 
